# trab_ed1

./: .gitignore  CMakeLists.txt  README.md  Trabalho ES1 - Av2.txt
scripts/: run.sh  sanatizecheck.sh
src/: main.c
